// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SteamWidget renders AI summary if present 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-fxxzhu"
    >
      <div
        class="css-lvgdrp"
      >
        <p>
          This is an AI summary
        </p>
      </div>
      <p
        class="css-17yje2i"
      >
        Generated with Claude Sonnet 4.6 (AI)
      </p>
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1dx5shc"
    >
      <button
        aria-label="View Half-Life on Steam"
        class="css-1hu4gjp"
        type="button"
      >
        <div
          class="css-1btx6pw"
        >
          <img
            alt="Half-Life header"
            class="css-6bb7n6"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="steam-game-card_hover-overlay css-134i6es"
          >
            Open in Steam
            <span>
              <svg
                aria-hidden="true"
                focusable="false"
                height="0.75em"
                viewBox="0 0 512 512"
                width="0.75em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="steam-game-card_caption css-7snenl"
        >
          <div
            class="css-3gb3jr"
          >
            Half-Life
          </div>
          <div
            class="css-1l30cyv"
          >
            2 hours
          </div>
        </div>
      </button>
      <button
        aria-label="View Portal on Steam"
        class="css-1hu4gjp"
        type="button"
      >
        <div
          class="css-1btx6pw"
        >
          <img
            alt="Portal header"
            class="css-6bb7n6"
            src="https://example.com/portal.jpg"
          />
          <div
            class="steam-game-card_hover-overlay css-134i6es"
          >
            Open in Steam
            <span>
              <svg
                aria-hidden="true"
                focusable="false"
                height="0.75em"
                viewBox="0 0 512 512"
                width="0.75em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="steam-game-card_caption css-7snenl"
        >
          <div
            class="css-3gb3jr"
          >
            Portal
          </div>
          <div
            class="css-1l30cyv"
          >
            45 minutes
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-munl51"
      >
        <button
          aria-label="View Cities: Skylines on Steam"
          class="css-1hu4gjp"
          type="button"
        >
          <div
            class="css-1btx6pw"
          >
            <img
              alt="Cities: Skylines header"
              class="css-6bb7n6"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-18c3nn9"
            >
              1
            </div>
            <div
              class="steam-game-card_hover-overlay css-134i6es"
            >
              Open in Steam
              <span>
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="0.75em"
                  viewBox="0 0 512 512"
                  width="0.75em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="steam-game-card_caption css-7snenl"
          >
            <div
              class="css-3gb3jr"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1l30cyv"
            >
              757.4 hrs total • 2 hours recently
            </div>
          </div>
        </button>
        <button
          aria-label="View ARK: Survival Evolved on Steam"
          class="css-1hu4gjp"
          type="button"
        >
          <div
            class="css-1btx6pw"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-6bb7n6"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-18c3nn9"
            >
              2
            </div>
            <div
              class="steam-game-card_hover-overlay css-134i6es"
            >
              Open in Steam
              <span>
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="0.75em"
                  viewBox="0 0 512 512"
                  width="0.75em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="steam-game-card_caption css-7snenl"
          >
            <div
              class="css-3gb3jr"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1l30cyv"
            >
              277.8 hrs total
            </div>
          </div>
        </button>
      </div>
      <div
        class="css-1jvjqv3"
      >
        <div
          class="css-12f4tqr"
        >
          Total Hours: 
          <span
            class="css-13epqkc"
          >
            1,035.2 hrs
          </span>
        </div>
        <div
          class="css-12f4tqr"
        >
          Average: 
          <span
            class="css-13epqkc"
          >
            517.6 hrs per game
          </span>
        </div>
      </div>
      <div
        class="css-1wrm9ji"
      >
        <a
          class="css-1vusgb5"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders correctly with sample data 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1dx5shc"
    >
      <button
        aria-label="View Half-Life on Steam"
        class="css-1hu4gjp"
        type="button"
      >
        <div
          class="css-1btx6pw"
        >
          <img
            alt="Half-Life header"
            class="css-6bb7n6"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="steam-game-card_hover-overlay css-134i6es"
          >
            Open in Steam
            <span>
              <svg
                aria-hidden="true"
                focusable="false"
                height="0.75em"
                viewBox="0 0 512 512"
                width="0.75em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="steam-game-card_caption css-7snenl"
        >
          <div
            class="css-3gb3jr"
          >
            Half-Life
          </div>
          <div
            class="css-1l30cyv"
          >
            2 hours
          </div>
        </div>
      </button>
      <button
        aria-label="View Portal on Steam"
        class="css-1hu4gjp"
        type="button"
      >
        <div
          class="css-1btx6pw"
        >
          <img
            alt="Portal header"
            class="css-6bb7n6"
            src="https://example.com/portal.jpg"
          />
          <div
            class="steam-game-card_hover-overlay css-134i6es"
          >
            Open in Steam
            <span>
              <svg
                aria-hidden="true"
                focusable="false"
                height="0.75em"
                viewBox="0 0 512 512"
                width="0.75em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="steam-game-card_caption css-7snenl"
        >
          <div
            class="css-3gb3jr"
          >
            Portal
          </div>
          <div
            class="css-1l30cyv"
          >
            45 minutes
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-munl51"
      >
        <button
          aria-label="View Cities: Skylines on Steam"
          class="css-1hu4gjp"
          type="button"
        >
          <div
            class="css-1btx6pw"
          >
            <img
              alt="Cities: Skylines header"
              class="css-6bb7n6"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-18c3nn9"
            >
              1
            </div>
            <div
              class="steam-game-card_hover-overlay css-134i6es"
            >
              Open in Steam
              <span>
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="0.75em"
                  viewBox="0 0 512 512"
                  width="0.75em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="steam-game-card_caption css-7snenl"
          >
            <div
              class="css-3gb3jr"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1l30cyv"
            >
              757.4 hrs total • 2 hours recently
            </div>
          </div>
        </button>
        <button
          aria-label="View ARK: Survival Evolved on Steam"
          class="css-1hu4gjp"
          type="button"
        >
          <div
            class="css-1btx6pw"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-6bb7n6"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-18c3nn9"
            >
              2
            </div>
            <div
              class="steam-game-card_hover-overlay css-134i6es"
            >
              Open in Steam
              <span>
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="0.75em"
                  viewBox="0 0 512 512"
                  width="0.75em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="steam-game-card_caption css-7snenl"
          >
            <div
              class="css-3gb3jr"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1l30cyv"
            >
              277.8 hrs total
            </div>
          </div>
        </button>
      </div>
      <div
        class="css-1jvjqv3"
      >
        <div
          class="css-12f4tqr"
        >
          Total Hours: 
          <span
            class="css-13epqkc"
          >
            1,035.2 hrs
          </span>
        </div>
        <div
          class="css-12f4tqr"
        >
          Average: 
          <span
            class="css-13epqkc"
          >
            517.6 hrs per game
          </span>
        </div>
      </div>
      <div
        class="css-1wrm9ji"
      >
        <a
          class="css-1vusgb5"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders error state (hasFatalError) 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-et6zal"
      >
        <p
          class="css-13s56l1"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders loading state 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      aria-hidden="true"
      class="css-1x6v59e"
    >
      <div
        class="show-loading-animation css-ylcmma"
      >
        <div
          class="text-block"
          style="width: 100%;"
        >
          <div
            class="text-row"
            style="max-height: 20%; width: 97%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0px;"
          />
          <div
            class="text-row"
            style="max-height: 20%; width: 100%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
          <div
            class="text-row"
            style="max-height: 20%; width: 94%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
        </div>
      </div>
      <div
        class="css-n4yf41"
      >
        <div
          aria-hidden="true"
          class="css-obv90v"
        />
      </div>
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1dx5shc"
    >
      <div
        aria-hidden="true"
        class="css-11qn5ob"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; aspect-ratio: 2.15 / 1;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-11qn5ob"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; aspect-ratio: 2.15 / 1;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-11qn5ob"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; aspect-ratio: 2.15 / 1;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-11qn5ob"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; aspect-ratio: 2.15 / 1;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-11qn5ob"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; aspect-ratio: 2.15 / 1;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-11qn5ob"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; aspect-ratio: 2.15 / 1;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-1g612vj"
      >
        <div
          class="css-3wu3l6"
        />
        <p
          class="css-gej412"
        >
          Loading Gaming Library...
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders with empty metrics 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1dx5shc"
    >
      <button
        aria-label="View Half-Life on Steam"
        class="css-1hu4gjp"
        type="button"
      >
        <div
          class="css-1btx6pw"
        >
          <img
            alt="Half-Life header"
            class="css-6bb7n6"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="steam-game-card_hover-overlay css-134i6es"
          >
            Open in Steam
            <span>
              <svg
                aria-hidden="true"
                focusable="false"
                height="0.75em"
                viewBox="0 0 512 512"
                width="0.75em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="steam-game-card_caption css-7snenl"
        >
          <div
            class="css-3gb3jr"
          >
            Half-Life
          </div>
          <div
            class="css-1l30cyv"
          >
            2 hours
          </div>
        </div>
      </button>
      <button
        aria-label="View Portal on Steam"
        class="css-1hu4gjp"
        type="button"
      >
        <div
          class="css-1btx6pw"
        >
          <img
            alt="Portal header"
            class="css-6bb7n6"
            src="https://example.com/portal.jpg"
          />
          <div
            class="steam-game-card_hover-overlay css-134i6es"
          >
            Open in Steam
            <span>
              <svg
                aria-hidden="true"
                focusable="false"
                height="0.75em"
                viewBox="0 0 512 512"
                width="0.75em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="steam-game-card_caption css-7snenl"
        >
          <div
            class="css-3gb3jr"
          >
            Portal
          </div>
          <div
            class="css-1l30cyv"
          >
            45 minutes
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-munl51"
      >
        <button
          aria-label="View Cities: Skylines on Steam"
          class="css-1hu4gjp"
          type="button"
        >
          <div
            class="css-1btx6pw"
          >
            <img
              alt="Cities: Skylines header"
              class="css-6bb7n6"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-18c3nn9"
            >
              1
            </div>
            <div
              class="steam-game-card_hover-overlay css-134i6es"
            >
              Open in Steam
              <span>
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="0.75em"
                  viewBox="0 0 512 512"
                  width="0.75em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="steam-game-card_caption css-7snenl"
          >
            <div
              class="css-3gb3jr"
            >
              Cities: Skylines
            </div>
            <div
              class="css-1l30cyv"
            >
              757.4 hrs total • 2 hours recently
            </div>
          </div>
        </button>
        <button
          aria-label="View ARK: Survival Evolved on Steam"
          class="css-1hu4gjp"
          type="button"
        >
          <div
            class="css-1btx6pw"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-6bb7n6"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-18c3nn9"
            >
              2
            </div>
            <div
              class="steam-game-card_hover-overlay css-134i6es"
            >
              Open in Steam
              <span>
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="0.75em"
                  viewBox="0 0 512 512"
                  width="0.75em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="steam-game-card_caption css-7snenl"
          >
            <div
              class="css-3gb3jr"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-1l30cyv"
            >
              277.8 hrs total
            </div>
          </div>
        </button>
      </div>
      <div
        class="css-1jvjqv3"
      >
        <div
          class="css-12f4tqr"
        >
          Total Hours: 
          <span
            class="css-13epqkc"
          >
            1,035.2 hrs
          </span>
        </div>
        <div
          class="css-12f4tqr"
        >
          Average: 
          <span
            class="css-13epqkc"
          >
            517.6 hrs per game
          </span>
        </div>
      </div>
      <div
        class="css-1wrm9ji"
      >
        <a
          class="css-1vusgb5"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders with empty recentlyPlayedGames and ownedGames 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-1uxgoez"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-lnnjou"
    >
      <div
        class="css-et6zal"
      >
        <p
          class="css-13s56l1"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
